--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "samuel/marvel",
     "type": "project",
-    "description": "custom laravel tempalte",
+    "description": "custom laravel6 tempalte",
     "keywords": [
         "framework",
         "laravel"
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^1.0",
         "overtrue/laravel-lang": "^3.0"
     },
     "require-dev": {
