--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "php": "^7.2",
         "dcat/laravel-admin": "2.0.19-beta",
         "fideloper/proxy": "^4.0",
+        "jiannei/laravel-enum": "^1.3",
+        "jiannei/laravel-response": "^1.6",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.0",
