--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "dcat/laravel-admin": "2.1.0-beta",
+        "dcat/laravel-admin": "2.1.5-beta",
+        "dcat/laravel-wherehasin": "^0.8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,11 +17,14 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "overtrue/laravel-lang": "^5.0",
+        "sparkinzy/dcat-distpicker": "^1.0",
+        "sparkinzy/dcat-kindeditor": "^1.0",
+        "sparkinzy/dcat-viewer": "^1.0",
         "sparkinzy/laravel-schedule-command": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "barryvdh/laravel-ide-helper": "^2.7",
-        "eleven26/listen-sql": "^1.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
