feature(upgrade): 升级版本

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "name": "samuel/marvel",
     "type": "project",
-    "version": "2.0.3",
-    "description": "The Laravel Framework.",
+    "description": "The Laravel skeleton.",
     "keywords": ["marvel","framework", "laravel"],
     "license": "MIT",
     "require": {
